Fixed Linear Model table overflow, code cleanup

--- a/src/components/LinearPricingModel.scss
+++ b/src/components/LinearPricingModel.scss
@@ -1,12 +1,20 @@
 @import '../global-styles.scss';
 
 .linear-pricing-model {
-    h1 {
-        margin-left: 1rem;
+    .page-title {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+
+        h1 {
+            margin-left: 1rem;
+            margin-bottom: 0.5rem;
+        }
     }
 
     .table-wrapper {
-        padding-bottom: 60px;
+        height: calc(90vh - 80px);
+        overflow: scroll;
     }
 
     table {
